<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#2F2E41">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FAFF04"
        android:textSize="25sp"
        android:text="@string/if_unit_of_item_is_none" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FAFF04"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/amount_quantity_rate" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FAFF04"
        android:textSize="25sp"


        android:text="@string/otherwise" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FAFF04"
        android:textSize="25sp"
        android:gravity="center"

        android:text="@string/amount_rate" />


</LinearLayout>