<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/topLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--        layout for edit and delete imageview-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
               app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/pencil"
                    app:layout_constraintRight_toLeftOf="@+id/delete" />

                <ImageView
                    android:id="@+id/delete"

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="0dp"
                    android:layout_marginStart="20dp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/black"/>
<!--        layout for item name-->
        <LinearLayout
              android:id="@+id/itemNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name2"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="@font/satisfyregular"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>

<!--        layout for quantity-->
        <LinearLayout
            android:id="@+id/quantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/quantitytextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satisfyregular"
                    android:text="@string/quantity2"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/satisfyregular"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/quantitytextView"
                    tools:layout_editor_absoluteY="0dp" />
                <TextView
                    android:id="@+id/quantityUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/satisfyregular"
                    android:text="KG"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/quantity"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
<!--        hello now layout for rate-->
        <LinearLayout
            android:id="@+id/rateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/rate_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satisfyregular"
                    android:text="@string/rate2"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/satisfyregular"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/rate_textview"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:gravity="center"
                android:layout_gravity="center"
                android:fontFamily="@font/satisfyregular"
                android:textColor="@color/black"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>